--- a/templates/default/env.erb
+++ b/templates/default/env.erb
@@ -1,7 +1,6 @@
-DATABASE_USER=deploy
-DATABASE_PASSWORD=test1234
-DATABASE_NAME=tutorial
-DATABASE_HOST=tutorialserver.c4sb5x9i4nxh.eu-central-1.rds.amazonaws.com
-SECRET_KEY='f(2ppgp&bcr&92d1gy47jpgw*s65gh!uj()-%m9&&$ot#2v_e3'
-
-
+DATABASE_USER=<%= @database_user %>
+DATABASE_PASSWORD=<%= @database_password %>
+DATABASE_NAME=<%= @database_name %>
+DATABASE_HOST=<%= @database_host %>
+SECRET_KEY=<%= @secret_key %>
+NEW_VAR=NEW_VAR
